# fleet-platform

./: .gitignore  README.md  readme.md
backend/: CMakeLists.txt
backend/src/: charts.c  charts.h  db.c  db.h  driver_payments.c  driver_payments.h  drivers.c  drivers.h  fuel_entries.c  fuel_entries.h  http.c  http.h  km_logs.c  km_logs.h  loads.c  loads.h  main.c  stats.c  stats.h  trailers.c  trailers.h  trucks.c  trucks.h
frontend/static/: app.js  index.html  styles.css
